--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-api-practice",
+  "name": "random-pokemon-generator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
